--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body style="background-color: grey">
 
-    <div id="container"></div>
+
+    <div id="container" style="width: 100%; height: 100%; margin: auto;"></div>
+    <input id="input-img" type="file" accept="image/*">
+    <div id="output"></div>
+
     <script src="script.js"></script>
     
 </body>
