add download image function

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <div id="container" style="width: 100%; height: 100%; margin: auto;"></div>
     <input id="input-img" type="file" accept="image/*">
+    <button id="download">Download</button>
     <div id="output"></div>
 
     <script src="script.js"></script>
