--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
     </style>
     
 </head>
-<body style="background-color: grey; display: flex; flex-direction: row; justify-content: flex-start; align-items: flex-start; gap: 16px; color: whitesmoke;">
+<body style="background-color: #666; display: flex; flex-direction: row; justify-content: flex-start; align-items: flex-start; gap: 2rem; color: whitesmoke;">
     
 
-    <div id="container" style="width: 100%; height: 100%; margin: auto;"></div>
+    <div id="container" style="width: 1600px; height: 100%;"></div>
     <div class="buttons-wrapper" style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: .5rem;">
-        <h2>Download Image</h2>
+        <h2>Upload Image</h2>
         <input id="input-img" type="file" accept="image/*">
+        <h2>Download Image</h2>
         <button id="download">Download</button>
         <h2>Set image in input</h2>
         <button id="select-image">Set</button>
+        <span>Placeholder input</span>
         <input id="input-cart-img" type="file" accept="image/*">
-        <div id="output"></div>
     </div>
 
     <script src="script.js"></script>
