Layer Manipulation Panel

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="buttons-wrapper" style="display: flex; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: .5rem;">
         <h2>Upload Image</h2>
         <input id="input-img" type="file" accept="image/*">
-        <h2>Layer Navigation</h2>
+        <h2>Layer Manipulation</h2>
         <div class="display: flex; flex-direction: row; gap: 1rem; flex-wrap: wrap;">
             <button id="toTop">Move to top</button>
             <button id="toBottom">Move to bottom</button>
