set canvas as file in input

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         <h2>Download Image</h2>
         <button id="download">Download</button>
         <h2>Set image in input</h2>
-        <button id="select-image">Set Value</button>
-        <button id="clear-value">Clear Value</button>
+        <button id="select-image">Set Image</button>
         <span>((Placeholder input))</span>
         <input id="input-cart-img" type="file" accept="image/*">
     </div>
