--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         <div class="display: flex; flex-direction: row; gap: 1rem; flex-wrap: wrap;">
             <button id="toTop">Move to top</button>
             <button id="toBottom">Move to bottom</button>
+            <button id="node-clone">Clone Item</button>
             <span>Border-radius</span>
             <input type="number" name="border-radius" id="border-radius">
+            <button id="node-delete">Delete</button>
         </div>
         <h2>Download Image</h2>
         <button id="download">Download</button>
