fix: multiple clones

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <button id="node-clone">Clone Item</button>
             <span>Border-radius</span>
             <input type="number" name="border-radius" id="border-radius">
-            <button id="node-delete">Delete</button>
+            <br><br>
+            <button id="node-delete">Delete Item</button>
         </div>
         <h2>Download Image</h2>
         <button id="download">Download</button>
