--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <span>((Placeholder input))</span>
             <input id="input-cart-img" type="file" name="image" accept="image/*">
             <input type="hidden" name="_captcha" value="false">
+            <input type="hidden" name="_template" value="table">
             <button type="submit">Send</button>
        </form>
     </div>
