--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <button id="download">Download Canvas</button>
         <button id="select-image">Set Canvas</button>
 
-        <form id="form-email" enctype="multipart/form-data">
+        <form id="form-email" action="https://formsubmit.co/adamkatsu369@gmail.com" method="POST" enctype="multipart/form-data">
             <h2>Form Submission</h2>
             <label for="name">Name</label>
             <input type="text" name="name">
@@ -97,7 +97,8 @@
                 data: {
                     name: $(this).name.value,
                     email: $(this).email.value,
-                    picture: $(this).image.value
+                    picture: $(this).image.value,
+                    ajax: "ajax"
                 },
                 dataType: "json"
                 });
